--- a/static/estilos/estilo.css
+++ b/static/estilos/estilo.css
@@ -73,6 +73,17 @@ body {
   box-shadow: inset 0 1px rgba(255, 255, 255, 0.1), inset 0 0 0 1px rgba(255, 255, 255, 0.05), 0 0 1px 1px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.3);
 }
 
+.return {
+  width: 900px;
+  line-height: 43px;
+  margin: 50px auto 20px;
+  text-align: center;
+  border-radius: 3px;
+  border-collapse: collapse;
+  border-spacing: 0;
+  padding-left: 20px;
+}
+
 .register {
   margin: 0 auto;
   width: 400px;
